src/test/ui/dropck/dropck-eyepatch.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch.rs:80:20
   |
LL |     dt = Dt("dt", &c);
   |                    ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch.rs:82:20
   |
LL |     dr = Dr("dr", &c);
   |                    ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch.rs:90:29
   |
LL |     pt = Pt("pt", &c_long, &c);
   |                             ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch.rs:92:29
   |
LL |     pr = Pr("pr", &c_long, &c);
   |                             ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 4 previous errors

If you want more information on this error, try using "rustc --explain E0597"
